# sanchosql

./: .clang-format  .gitignore  .travis.yml  CHANGELOG  CMakeLists.txt  README.md  bump_version.sh  debug.sh  sanchosql-0.2-alpha-Linux.deb  sanchosql.desktop  tests.sh
ci/: Dockerfile.ubuntu1804
res/: dashboard.glade  main_menu.glade  resources.gresource.xml  test.glade  toolbar.glade  window_new_connection.glade  window_preferences.glade  window_table_info.glade
src/: config.hpp  conn_util.cpp  conn_util.hpp  connection_details.cpp  connection_details.hpp  connections.cpp  connections.hpp  files.cpp  main_window.cpp  main_window.hpp  pc.cpp  pg_conn.cpp  pg_conn.hpp  query_result.cpp  query_result.hpp  sanchosql.cpp  string.cpp  string.hpp  tab.cpp  tab.hpp  util.cpp  util.hpp  win_new_connection.cpp  win_new_connection.hpp
src/db/core/: conn_util.cpp  conn_util.hpp  connection_details.cpp  connection_details.hpp  connections.cpp  connections.hpp  query_result.cpp  query_result.hpp
src/db/model/: abstract_tab_model.hpp  list_tab_model.cpp  list_tab_model.hpp  query_tab_model.hpp
src/db/pg/: pg_conn.cpp  pg_conn.hpp  pg_queries.cpp  pg_queries.hpp
src/model/: abstract_tab_model.hpp  list_tab_model.cpp  list_tab_model.hpp  query_tab_model.hpp  tab_model.cpp  tab_model.hpp
src/system/: files.cpp  files.hpp  preferences.cpp  preferences.hpp
src/ui/gtk/: common_ui.hpp  main_window.cpp  main_window.hpp  number_entry.hpp  tab.cpp  tab.hpp  win_new_connection.cpp  win_new_connection.hpp  win_preferences.cpp  win_preferences.hpp  win_table_info.cpp  win_table_info.hpp
src/widgets/: number_entry.hpp
tests/: CMakeLists.txt  Makefile  mock_pg_conn.hpp  test_cell_update.cpp  test_string.cpp  test_util  test_util.cpp
tests/sql/: setup.sql  setup_ci.sh
tests/unit_tests/: test_string.cpp
